Texts in 3D, Z-index to fix

--- a/src/Texts.css
+++ b/src/Texts.css
@@ -1,59 +1,50 @@
-.scrollContainer {
-  position: sticky;
-  top: 0;
-  left: 0;
-  overflow-y: auto;
-  scroll-snap-type: y proximity;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  user-select: none;
-}
-
-.scrollContainer>div {
-  scroll-snap-align: start;
-}
-
-.area {
-  pointer-events: none;
-  position: sticky;
-  top: 0px;
-  display: inline-block;
-  max-width: 700px;
-
-  padding: 60px;
+.text {
   color: #023976;
-  line-height: 1.6em;
-  font-size: 15px;
+  line-height: 1;
+  font-size: 1em;
   letter-spacing: 1.5px;
 }
 
-.area>h1 {
-  -webkit-font-smoothing: auto;
-  pointer-events: none;
+.text>h2 {
   color: #023976;
+  margin-top: 0px;
+  margin-bottom: 1px;
   font-size: 3em;
-  font-weight: 800;
-  line-height: 1em;
-  margin: 0;
-  margin-bottom: 0.25em;
 }
 
 @media only screen and (max-width: 800px) {
-  .area>h1 {
+  .text>h2 {
     font-size: 3em;
+    color: red;
+;
   }
 }
 
 @media only screen and (max-width: 700px) {
-  .area>h1 {
+  .text>h2 {
     font-size: 3em;
+    color: green;
+
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .area>h1 {
-    font-size: 3em;
+  .text>h2 {
+    font-size: 6em;
+    color: blue;
   }
+}
+
+.btn {
+  display: block;
+  margin-top: 1em;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 10px 20px;
+  background: #023976;
+  background: linear-gradient(90deg, #026eb0 0%, #023976 100%);    
+  z-index: 20;
+  color: #ffffff;
+  border-radius: 10px;
 }
